--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   margin:0;
 }
 a{
-  color: black;
-  text-decoration: none;
+  color: blue;
+  text-decoration: underline;
 }
 h1 {
   font-size :100px;
